@@ -1,3 +1,7 @@
+17/03/09 [biopp-devel-forum:11]
+* Bug fixed in PhylogeneticApplicationTools::optimizeParameters.
+* Also fixed error in documentation of JC models.
+
 19/02/09 [biopp-devel-forum:6]
 * Method clone in abstract[Reversible]SubstitutionModel.
 
